--- a/css/style.css
+++ b/css/style.css
@@ -297,17 +297,16 @@ header {
 image ever fails, we have a 'backup' */
 .my-services {
   background-color: var(--clr-bg);
-  background-image: url('../images/olena-sergienko-cHlK4sZXOQo-unsplash.jpg');
-  background-position: right top;
-  background-blend-mode: multiply;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('../images/olena-sergienko-cHlK4sZXOQo-unsplash.jpg');
+  background-position: center center;
   background-size: cover;
-
   color: var(--clr-text);
   text-align: center;
 }
 
 .section__title--services {
-  color: var(--clr-text);
+  color: white;
   position: relative;
 }
 
@@ -324,8 +323,8 @@ image ever fails, we have a 'backup' */
 .services {
   margin-bottom: 2em;
   font-family: var(--ff-secondary);
-  font-weight: 900;
-  color: black;
+  z-index: 2;
+  color: var(--clr-bg);
 }
 
 .service {
