--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ header {
   align-items: flex-end;
   margin: 0;
   margin-right: 3em;
-  padding: 0;
+  padding-top: 50px;
 }
 
 .nav__link {
@@ -170,7 +170,7 @@ header {
 }
 
 .nav-toggle {
-  padding: 0.5em;
+  padding: 0.5em 0.5em 10em 0.5em;
   background: transparent;
   border: 0;
   cursor: pointer;
